* Added: - `IsACEGeneratorsInPreferredOrder'     (If there is more than 1 generator and the first generator is     an involution and the second generator is not an involution,     without `special action' ACE will swap the first two generators.)   - `IsACEStandardCosetTable' (an update of `IsStandardized' that                                accepts the `lenlex' option) * Updated documentation of `ACECosetTable'/`ACECosetTableFromGensAndRels'   to mention `silent', `incomplete' and `lenlex' options. * Modified entries for `ACEStandardCosetNumbering' etc. and corrected   cross-referencing between Chapters 1 and 6, for functions with   both interactive and non-interactive forms. * Updated:   - `incomplete' option

--- a/doc/basics.tex
+++ b/doc/basics.tex
@@ -381,11 +381,11 @@ which is the  one  used  within  {\ACE}.  (With  the  `lenlex'  option
 (see~"option lenlex"), the coset table output  by  `ACECosetTable'  or
 `ACECosetTableFromGensAndRels'  is  standardised  according   to   the
 `lenlex' scheme.) The `lenlex' scheme  is  very  similar  to  {\GAP}'s
-default scheme except inverse generators are  included,  each  inverse
-generator included immediately are  each  generator  in  the  alphabet
-ordering that defines the `lexical' order. By doing this and including
-the  columns  for  the  inverse  generators  immediately   after   the
-corresponding generators, in  the  coset  table,  one  finds  for  the
+default scheme except  inverse  generators  are  included,  with  each
+inverse generator included  immediately  are  each  generator  in  the
+alphabet ordering that defines the `lexical' ordering. By  doing  this
+and including the columns for the inverse generators immediately after
+the corresponding generators, in the coset table, one  finds  for  the
 `lenlex' scheme that again when one scans the body of  the  table  new
 coset  numbers  appear  in  numeric  order.  Let  us  take  the   same
 presentation as before for an example. Then the first 21 lines of  its
