--- a/doc/ace.tex
+++ b/doc/ace.tex
@@ -122,6 +122,7 @@ by either of
 
 \>ACECosetTableFromGensAndRels( <fgens>, <rels>, <sgens> [: <options>] ) F
 \>ACECosetTable( <fgens>, <rels>, <sgens> [: <options>] ) F
+\label{ACECosetTableNI}
 
 Here <fgens> is a list of free generators, <rels> a list of  words  in
 these generators giving relators for a finitely presented  group,  and
@@ -130,8 +131,8 @@ the free generators. All these are given in the standard {\GAP} format
 (see Chapter~"ref:Finitely Presented Groups" of the  {\GAP}  Reference
 Manual). Note that `ACECosetTable' may be called with 0 or 1 arguments
 after  a  call  to  `ACEStart',  in  which  case  it  is  being   used
-interactively   (see    Section~"Using    ACE    Interactively"    and
-Chapter~"Functions for Using ACE Interactively").
+interactively     (see     Section~"Using      ACE      Interactively"
+and~"ACECosetTableI").
 
 Behind the colon any  selection  of  the  options  available  for  the
 interface (see Chapters~"Options for ACE"  and~"Strategy  Options  for
@@ -145,14 +146,40 @@ Please see Section~"General Warnings regarding the Use of Options" for
 a discussion regarding global and local passing of  options,  and  the
 non-orthogonal nature of {\ACE}'s options.
 
-The function calls the {\ACE} binary and  returns  the  (standardized)
-coset table obtained.
+Each of `ACECosetTableFromGensAndRels' and `ACECosetTable'  calls  the
+{\ACE} binary and, if successful, returns a standardised coset  table,
+as a {\GAP} list of lists. One of two  standardisations  is  possible:
+the default is {\GAP}'s default  standardisation;  the  other  is  the
+`lenlex' scheme and is selected via the `lenlex'  option  (see~"option
+lenlex"). For a detailed discussion of these standardisation  schemes,
+see  Section~"Coset  Table  Standardisation   Schemes".   We   provide
+`IsACEStandardCosetTable' (see~"IsACEStandardCosetTable") to determine
+whether a table (list of lists) is standardised relative  to  {\GAP}'s
+default standardisation, or with the `lenlex' option, relative to  the
+`lenlex' scheme.
+
+If the determination of a coset table is unsuccessful, then one of the
+following occurs:
+
+\beginlist
+
+\item{--} with the `incomplete' option  (see~"option  incomplete")  an
+incomplete coset table is returned (as a list of lists), with zeros in
+positions where valid coset numbers could not be determined; or
+
+\item{--} with the `silent' option (see~"option  silent"),  `fail'  is
+returned; or
+
+\item{--} a  `break'-loop  is  entered.  This  last   possibility   is
+discussed in detail via the example that follows.
+
+\endlist
 
 The example given  below  is  the  call  for  a  presentation  of  the
 Fibonacci group F(2,7) for  which  we  shall  discuss  the  impact  of
-various options in Appendix~"Examples". Observe that  in  the  example
-below, no options  are  passed,  which  means  that  {\ACE}  uses  the
-`default' strategy (see Chapter~"Strategy Options for ACE").
+various options in Appendix~"Examples". Observe that in  the  example,
+no options are passed, which means  that  {\ACE}  uses  the  `default'
+strategy (see Chapter~"Strategy Options for ACE").
 
 \beginexample
 gap> F:= FreeGroup( "a", "b", "c", "d", "e", "x", "y");;
@@ -167,9 +194,9 @@ In computing  the  coset  table,  `ACECosetTableFromGensAndRels'  must
 first do a coset enumeration (which is where {\ACE} comes in!). If the
 coset  enumeration  does  not  finish   in   the   preset   limits   a
 `break'-loop{\undoquotes\atindex{break-loop}{@`break'-loop}}        is
-entered, unless the `silent' option (see~"option silent") is  set,  in
-which case it returns `fail'. In the  event  that  a  `break'-loop  is
-entered, don't despair or  be  frightened  by  the  word  `Error';  by
+entered, unless the `incomplete' (see~"option incomplete") or `silent'
+(see~"option silent") options is set. In the event that a `break'-loop
+is entered, don't despair or be frightened by  the  word  `Error';  by
 tweaking  {\ACE}'s  options  via  the  `SetACEOptions'  function  that
 becomes available in the `break'-loop and then typing `return;' it may
 be possible to help {\ACE} complete the coset enumeration  (and  hence
@@ -244,6 +271,71 @@ gap> ACECosetTable(fgens, rels, [c] : purec);
 {\ACE} needs to define a `t'otal number of only  (relatively-speaking)
 332 coset numbers before the final collapse to 1 coset number.
 
+For an already  calculated  coset  table,  we  provide  the  following
+function to determine whether or not it has been standardised.
+
+\>IsACEStandardCosetTable( <table> ) F
+
+returns  `true'  if  <table>  (a  list  of  lists  of   integers)   is
+standardised according to {\GAP}'s default standardisation scheme, and
+`false' otherwise; and
+
+\>IsACEStandardCosetTable( <table> : lenlex ) F
+
+returns  `true'  if  <table>  (a  list  of  lists  of   integers)   is
+standardised  according  to  the   `lenlex'{\undoquotes\atindex{lenlex
+standardisation   scheme}    {@`lenlex'    standardisation    scheme}}
+standardisation scheme,  and  `false'  otherwise.  See  Section~"Coset
+Table Standardisation Schemes"  for  a  detailed  discussion  of  both
+standardisation schemes.
+
+*Note:*
+Essentially, `IsACEStandardCosetTable'  extends  the  {\GAP}  function
+`IsStandardized', by providing the option `lenlex'.
+
+Users     who     wish     their     coset      tables      to      be
+`lenlex'{\undoquotes\atindex{lenlex standardisation scheme} {@`lenlex'
+standardisation scheme}} standardised should  be  aquainted  with  the
+following function.
+
+\>IsACEGeneratorsInPreferredOrder( <gens>, <rels> ) F
+\label{IsACEGeneratorsInPreferredOrderNI}
+
+returns `true' if <gens>, a list of free group generators, are in  the
+order preferred by {\ACE}, for the group  with  presentation  $\langle
+<gens> \mid  <rels>\rangle$,  where  <rels>  is  a  list  of  relators
+(i.e.~words         in         the         generators         <gens>).
+`IsACEGeneratorsInPreferredOrder' may also  be  called  with  0  or  1
+arguments;  in  these  cases,  it  is   being   called   interactively
+(see~"IsACEGeneratorsInPreferredOrderI").
+
+For a presentation with more than one generator, the  first  generator
+of which is an involution and the second is  not,  {\ACE}  prefers  to
+switch the  first  two  generators.  `IsACEGeneratorsInPreferredOrder'
+returns `true' if the order of the  generators  <gens>  would  not  be
+changed  within  {\ACE}  and  `false',  otherwise.  (Technically,   by
+\lq{}involution' above, we really mean \lq{}a generator `x' for  which
+there is a relator in <rels> of form `x*x' or `x^2''. Such a generator
+may, of course, turn out to actually be the identity.)
+
+*Note:* 
+When  a  user  calls  `ACECosetTable'   with   the   `lenlex'   option
+(see~"option  lenlex"),  occasionally  it  is  necessary  to   enforce
+`asis'${}=1$ (see~"option asis"), which may be counter to the  desires
+of the  user.  The  occasions  where  this  action  is  necessary  are
+precisely those for which, for the  arguments  <gens>  and  <rels>  of
+`ACECosetTable',   `IsACEGeneratorsInPreferredOrder'   would    return
+`false'.
+
+*Guru Notes:*
+If  `IsACEGeneratorsInPreferredOrder(<gens>,  <rels>)'  would   return
+`false', it is possible to enforce a user's order  of  the  generators
+within {\ACE}, by setting the option `asis' (see~"option asis")  to  1
+and, if `<gens>[1]' is `x' passing the relator that  determines  `x''s
+order is at most 2 as: `x*x' (rather than `x^2').  Behind  the  scenes
+this is precisely what is done, if necessary, when `ACECosetTable'  is
+called with the `lenlex' option.
+
 \enditems
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -256,6 +348,7 @@ If you only want to  test, whether a coset enumeration terminates, and
 don't want to  transfer the whole coset table  to {\GAP}, you can call
 
 \>ACEStats( <fgens>, <rels>, <sgens> [: <options>] ) F
+\label{ACEStatsNI}
 
 which returns a record `rec(index=<i>, cputime=<c>, cputimeUnits=<cu>,
 activecosets=<a>, maxcosets=<m>, totcosets=<t>)' for which <i> is  the
@@ -271,6 +364,9 @@ and~"Strategy Options for ACE") are used in exactly the  same  way  as
 for `ACECosetTableFromGensAndRels', discussed in the previous section;
 and the same warnings alluded to previously,  regarding  options  (see
 Section~"General Warnings regarding the Use of Options"), apply.
+
+`ACEStats' may also be called with 0 or 1 arguments; in  these  cases,
+it is being called interactively (see~"ACEStatsI").
 
 \enditems
 
@@ -299,7 +395,8 @@ whose    arguments    and    options    are     exactly     as     for
 Sections~"Using ACE Directly to Generate a Coset Table" and~"Using ACE
 Directly to Test whether a Coset Enumeration  Terminates".  The  usual
 warnings  regarding  options  apply  (see  Section~"General   Warnings
-regarding the Use of Options").
+regarding the Use of Options"). `ACEStart' has a number of other forms
+(see~"ACEStartDetails").
 
 The return value is an integer (numbering from 1) which represents the
 running process. (It is possible to have  more  than  one  interactive
@@ -307,16 +404,17 @@ process running at once.) The integer returned may be  used  to  index
 which of these  processes  an  interactive  function  {\ACE}  function
 should be applied to.
 
-An interactive{\ACE} process is terminated with the command
+An interactive {\ACE} process is terminated with the command
 
 \>ACEQuit( <i> ) F
 
 where <i> is the integer returned by `ACEStart' when the  process  was
-begun.
+begun.   `ACEQuit'   may   also   be   called   with   no    arguments
+(see~"ACEQuitDetails").
 
 We discuss each of these commands, as well as the range  of  functions
 which enable one to access  features  of  the  {\ACE}  standalone  not
-available non-interactively, in depth in Chapter~"Functions for  Using
+available non-interactively, in depth, in Chapter~"Functions for Using
 ACE interactively".
 
 \enditems
