--- a/doc/examples.tex
+++ b/doc/examples.tex
@@ -601,6 +601,13 @@ options as you can. Also, note that the `*'-ed examples of  the  index
 fail  to  give  a  coset  table;  so  these  give  you  non-artificial
 `break'-loop examples for you to try.
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\Section{Using ACEReadResearchExample}
+
+Here I will describe how  `ACEReadResearchExample'  defines  functions
+such  as  `PGRelFind',  and  how  these   functions   were   used   in
+\cite{CHHR00} to show that the group $L_3(5)$ has deficiency 0.
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
 %E
