--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -396,6 +396,17 @@
   ADDRESS       = {St.~Lucia 4072, Australia}
 }
 
+@TECHREPORT{CHHR00,
+  AUTHOR        = {Colin M. Campbell and George Havas and Alexander Hulpke
+                   and Edmund F. Robertson},
+  TITLE         = {The simple group {$L_3(5)$} is efficient},
+  INSTITUTION   = {Centre for Discrete Mathematics and Computing,
+                   The University of Queensland},
+  YEAR          = {2000},
+  NUMBER        = {20},
+  ADDRESS       = {St.~Lucia 4072, Australia}
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
 %E
