--- a/doc/basics.tex
+++ b/doc/basics.tex
@@ -233,8 +233,8 @@ First, let us  broadly  discuss  strategies  and  how  they  influence
 allocation of a coset number. In a complete  coset  table  each  group
 relator produces a cycle of cosets numbers at each  coset  number,  in
 particular at coset 1, i.e.~for each relator $w$, and for  each  coset
-number $i$, successive  application  of  the  letters  of  $w$,  trace
-through a sequence of coset numbers that begins and ends in  $i$  (see
+number $i$, successive application of the letters of $w$ trace through
+a sequence  of  coset  numbers  that  begins  and  ends  in  $i$  (see
 Section~"Enumeration Style" for an example). It has been found to be a
 good general  rule  to  use  the  given  group  relators  as  subgroup
 generators. This ensures the early definition  of  some  useful  coset
@@ -277,7 +277,8 @@ queue. When and how these dead coset numbers are eventually eliminated
 is  controlled  by  the  options  `dmode',  `path'  and   `compaction'
 (see~"option dmode", "option path" and~"option compaction"). The  user
 may  also  force   coincidences   to   occur   (see   Section~"Finding
-Subgroups").
+Subgroups"), which, however, may change the subgroup whose cosets  are
+enumerated.
 
 The key  to  performance  of  coset  enumeration  procedures  is  good
 selection  of  the  next   coset   number   to   be   defined.   Leech
@@ -327,70 +328,19 @@ by  deleting  subgroup  generators  via  `ACEDeleteSubgroupGenerators'
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \Section{Coset Table Standardisation Schemes}
 
-The standardisation scheme for coset tables that is the  default  used
-in  {\GAP},  numbers  cosets   according   to   coset   representative
-word-length in the group generators and lexical  ordering  imposed  by
-the user-supplied  ordering  of  the  group  generators.  This  scheme
-ensures that as one scans  the  columns  corresponding  to  the  group
-generators (in user-supplied order) row by  row,  one  encounters  new
-coset numbers in numeric order. As an example, consider the (infinite)
-group with presentation $\langle x,  y,  a,  b  \mid  x^2,  y^3,  a^4,
-b^2\rangle$. According to {\GAP}'s standardisation  scheme  the  coset
-table  corresponding  to  this  presentation  (omitting  the   columns
-corresponding to  inverse  generators,  which  play  no  part  in  the
-numbering scheme) would begin as follows:
-
-\begintt
- coset no. ||      x      y      a      b    rep've
------------+--------------------------------------
-         1 ||      2      3      4      5
-         2 ||      1      6      7      8    x
-         3 ||      9     10     11     12    y
-         4 ||     13     14     15     16    a
-         5 ||     17     18     19      1    b
-         6 ||     20     21     22     23    xy
-         7 ||     24     25      2     26    xa
-         8 ||     27     28     29      2    xb
-         9 ||      3     30     31     32    yx
-        10 ||     33      1     34     35    yy
-        11 ||     36     37     38     39    ya
-        12 ||     40     41     42      3    yb
-        13 ||      4     43     44     45    ax
-        14 ||     46     47     48     49    ay
-        15 ||     50     51     52     53    aa
-        16 ||     54     55     56      4    ab
-        17 ||      5     57     58     59    bx
-        18 ||     60     61     62     63    by
-        19 ||     64     65     66     67    ba
-        20 ||      6     68     69     70    xyx
-        21 ||     71      2     72     73    xyy
-\endtt
-
-Observe that the representatives are ordered according to  length  and
-then the lexical ordering implied by defining $x\<y\<a\<b$ (with  some
-words omitted due to their equivalence to words that precede  them  in
-the ordering). Also observe that as one scans the body  of  the  table
-row by row from left to right new  coset  numbers  appear  in  numeric
-order without gaps (2, 3, 4, 5, then 1 which we have already seen,  6,
-7, etc.).
-
-A standardisation scheme that is often more convenient  than  {\GAP}'s
-default    scheme    is    the     `lenlex'{\undoquotes\atindex{lenlex
-standardisation scheme} {@`lenlex'  standardisation  scheme}}  scheme,
-which is the  one  used  within  {\ACE}.  (With  the  `lenlex'  option
-(see~"option lenlex"), the coset table output  by  `ACECosetTable'  or
-`ACECosetTableFromGensAndRels'  is  standardised  according   to   the
-`lenlex' scheme.) The `lenlex' scheme  is  very  similar  to  {\GAP}'s
-default scheme except  inverse  generators  are  included,  with  each
-inverse generator included  immediately  are  each  generator  in  the
-alphabet ordering that defines the `lexical' ordering. By  doing  this
-and including the columns for the inverse generators immediately after
-the corresponding generators, in the coset table, one  finds  for  the
-`lenlex' scheme that again when one scans the body of  the  table  new
-coset  numbers  appear  in  numeric  order.  Let  us  take  the   same
-presentation as before for an example. Then the first 21 lines of  its
-coset  table  using  the  `lenlex'  scheme  for  coset  numbering  and
-including columns for the inverse generators is as follows:
+A standardisation scheme that will soon become the one used in  {\GAP}
+and  is  the  standardisation   scheme   used   in   {\ACE}   is   the
+`lenlex'{\undoquotes\atindex{lenlex standardisation scheme} {@`lenlex'
+standardisation scheme}} scheme, of Charles  Sims~\cite{Sims94}.  This
+scheme  numbers  cosets  first  according  to  word-length  and   then
+according to a lexical ordering of coset representatives.  Each  coset
+representative  is  a  word  in  an   alphabet   consisting   of   the
+user-supplied generators and their inverses, and the lexical  ordering
+of `lenlex' is that implied by ordering that  alphabet  so  that  each
+generator is followed by its inverse, and  the  generators  appear  in
+user-supplied order. As an example, the first 20 lines of the `lenlex'
+standardised coset table of the  (infinite)  group  with  presentation
+$\langle x, y, a, b \mid x^2, y^3, a^4, b^2\rangle$ is as follows:
 
 \begintt
  coset no. ||      x      X      y      Y      a      A      b      B   rep've
@@ -415,18 +365,76 @@ including columns for the inverse generators is as follows:
         18 ||     81     81     82     83     84      4     85     85    Ya
         19 ||     86     86     87     88      4     84     89     89    YA
         20 ||     90     90     91     92     93     94      4      4    Yb
-        21 ||      5      5     95     96     97     98     99     99    ax
 \endtt
 
-In  the  table  each  inverse  generator   is   represented   by   the
+In the table each  inverse  of  a  generator  is  represented  by  the
 corresponding uppercase letter ($X$  represents  the  inverse  of  $x$
 etc.), and the lexical ordering of the representatives is that implied
-by defining $x\<X\<y\<Y\<a\<A\<b\<B$. As before, observe that  as  one
-scans the body of the table row by row from left to  right  new  coset
-numbers are encountered in numeric  order  without  gaps  (2,  then  2
-again, 3, 4, 5, 6, 7, then 7 again, etc.); but this time,  it  is  the
-inclusion of the columns that correspond  to  the  inverse  generators
-that makes it work.
+by defining an ordering of the alphabet  of  user-supplied  generators
+and  their  inverses  to  be  $x\<X\<y\<Y\<a\<A\<b\<B$.  
+
+A `lenlex'-standardised  coset  table  whose  columns  correspond,  in
+order, to the already-described  alphabet,  of  generators  and  their
+inverses, has an important property: a scan of the body of  the  table
+row by row from left to right, encounters new coset numbers in numeric
+order. Observe that the table above has this property: the  definition
+of coset 1 is implicit; the first coset number  we  encounter  in  the
+table body is 2, then 2 again, 3, 4, 5, 6, 7, then 7 again, etc.
+
+With the `lenlex' option (see~"option lenlex"), the coset table output
+by `ACECosetTable' or `ACECosetTableFromGensAndRels'  is  standardised
+according to the `lenlex' scheme.
+
+Another  standardisation  scheme  for  coset  tables  (currently   the
+standard one used  in  {\GAP}),  numbers  cosets  according  to  coset
+representative  word-length  in  the  group  generators  and   lexical
+ordering imposed by the user-supplied ordering of the group generators
+(i.e.~ it is like `lenlex' but generator  inverses  do  not  feature).
+This scheme ensures that as one scans the columns corresponding to the
+group generators (in user-supplied order) row by row,  one  encounters
+new coset numbers in numeric order. As an example, consider again  the
+(infinite) group with presentation $\langle x, y, a, b \mid x^2,  y^3,
+a^4,  b^2\rangle$.  According  to  this   scheme   the   coset   table
+corresponding  to  the  aforementioned  presentation   (with   columns
+corresponding to  inverse  generators,  which  play  no  part  in  the
+numbering scheme, omitted) would begin as follows:
+
+\begintt
+ coset no. ||      x      y      a      b    rep've
+-----------+--------------------------------------
+         1 ||      2      3      4      5
+         2 ||      1      6      7      8    x
+         3 ||      9     10     11     12    y
+         4 ||     13     14     15     16    a
+         5 ||     17     18     19      1    b
+         6 ||     20     21     22     23    xy
+         7 ||     24     25      2     26    xa
+         8 ||     27     28     29      2    xb
+         9 ||      3     30     31     32    yx
+        10 ||     33      1     34     35    yy
+        11 ||     36     37     38     39    ya
+        12 ||     40     41     42      3    yb
+        13 ||      4     43     44     45    ax
+        14 ||     46     47     48     49    ay
+        15 ||     50     51     52     53    aa
+        16 ||     54     55     56      4    ab
+        17 ||      5     57     58     59    bx
+        18 ||     60     61     62     63    by
+        19 ||     64     65     66     67    ba
+        20 ||      6     68     69     70    xyx
+\endtt
+
+Observe that the representatives are ordered according to  length  and
+then the lexical ordering implied by defining $x\<y\<a\<b$ (with  some
+words omitted due to their equivalence to words that precede  them  in
+the ordering). Also observe that as one scans the body  of  the  table
+row by row from left to right new  coset  numbers  appear  in  numeric
+order without gaps (2, 3, 4,  5,  then  1  which  we  have  implicitly
+already seen, 6, 7, etc.).
+
+In the next version of {\GAP}, it is expected that the `lenlex' scheme
+will be adopted as the standard  {\GAP}  coset  table  standardisation
+scheme.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
